<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_reserved"
            android:icon="@drawable/baseline_car_rental_24"
            android:title="@string/car_reserved"/>
        <item
            android:id="@+id/nav_return"
            android:icon="@drawable/baseline_directions_car_24"
            android:title="@string/car_return"/>
        <item
            android:id="@+id/nav_pickup"
            android:icon="@drawable/baseline_location_on_24"
            android:title="@string/pick_up_location"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/baseline_feedback_24"
            android:title="@string/feedback"/>
    </group>
</menu>